--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
-    "react-scripts": "1.0.17"
+    "jquery": "3.2.1",
+    "react": "16.1.1",
+    "react-dom": "16.1.1",
+    "react-scripts": "1.0.17",
+    "rxjs": "5.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
