--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "jquery": "3.2.1",
+    "material-ui": "0.19.4",
     "react": "16.1.1",
     "react-dom": "16.1.1",
     "react-scripts": "1.0.17",
