--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "github-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://jeffmcnd.github.io/github-react",
   "dependencies": {
     "jquery": "3.2.1",
     "material-ui": "0.19.4",
@@ -14,6 +15,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
