rearrange folder structure for tests
Write two units tests for the UserListContainer that check that it calls
the GithubApi and renders a UserList and also passes the expected props
down to the UserList.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
     "gh-pages": "^1.1.0"
   }
 }
