--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "homepage": "http://jeffmcnd.github.io/github-react",
   "dependencies": {
-    "jquery": "3.2.1",
+    "isomorphic-fetch": "2.2.1",
     "material-ui": "0.19.4",
     "react": "16.1.1",
     "react-dom": "16.1.1",
